# self-corrective-rag-llamaindex

./: LICENSE  README.md  pyproject.toml
notebooks/: download_data.ipynb  rag.ipynb  self_corrective_rag.html  test.ipynb
src/: event_schema.py  llms.py  output_schema.py  prompts.py  workflow.py
